PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2017, PHP 7.1.5



13 Apr 2017, PHP 7.1.4

- Core:
  . Fixed bug #74149 (static embed SAPI linkage error). (krakjoe)
  . Fixed bug #73370 (falsely exits with "Out of Memory" when using
    USE_ZEND_ALLOC=0). (Nikita)
  . Fixed bug #73960 (Leak with instance method calling static method with
    referenced return). (Nikita)
  . Fixed bug #69676 (Resolution of self::FOO in class constants not correct).
    (Nikita)
  . Fixed bug #74265 (Build problems after 7.0.17 release: undefined reference
    to `isfinite'). (Nikita)
  . Fixed bug #74302 (yield fromLABEL is over-greedy). (Sara)

- Apache:
  . Reverted patch for bug #61471, fixes bug #74318. (Anatol)

- Date:
  . Fixed bug #72096 (Swatch time value incorrect for dates before 1970). (mcq8)

- DOM:
  . Fixed bug #74004 (LIBXML_NOWARNING flag ingnored on loadHTML*).
    (somedaysummer)

- iconv:
  . Fixed bug #74230 (iconv fails to fail on surrogates). (Anatol)

- Opcache:
  . Fixed bug #74250 (OPcache compilation performance regression in PHP 5.6/7
    with huge classes). (Nikita)

- OpenSSL:
  . Fixed bug #72333 (fwrite() on non-blocking SSL sockets doesn't work).
    (Jakub Zelenka)

- PDO MySQL:
  . Fixed bug #71003 (Expose MYSQLI_CLIENT_SSL_DONT_VERIFY_SERVER_CERT to PDO
    interface). (Thomas Orozco)

- SPL:
  . Fixed bug #74058 (ArrayObject can not notice changes). (Andrew Nester)

- Sqlite:
  . Implemented FR #74217 (Allow creation of deterministic sqlite functions).
    (Andrew Nester)

- Streams:
  . Fixed bug #74216 (Correctly fail on invalid IP address ports). (Sara)

- Zlib:
  . Fixed bug #74240 (deflate_add can allocate too much memory). (Matt Bonneau)

16 Mar 2017, PHP 7.1.3

- Core:
  . Fixed bug #74157 (Segfault with nested generators). (Laruence)
  . Fixed bug #74164 (PHP hangs when an invalid value is dynamically passed to